# stickittome

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
examples/sample_poses/: README.md  arms_up.pose.json  standing.pose.json  walking.pose.json
scripts/: make_sample_poses.py
src/stickitto/: __init__.py  __main__.py  app.py  exporter.py  io_json.py  model.py
